WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201813
[WebAuthn] REGRESSION (
r249059
): Leak of WKMockNFTag objects and WKMockNFTag instance variables
https://bugs.webkit.org/show_bug.cgi?id=201813
Summary
[WebAuthn] REGRESSION (r249059): Leak of WKMockNFTag objects and WKMockNFTag ...
David Kilzer (:ddkilzer)
Reported
2019-09-15 22:14:13 PDT
Leak of WKMockNFTag instances (missing -release) and WKMockNFTag instance variables (missing -dealloc). Regressed with:
Bug 188624
: [WebAuthn] Support NFC authenticators for iOS <
https://bugs.webkit.org/show_bug.cgi?id=188624
> <
https://trac.webkit.org/changeset/249059/webkit
>
Attachments
Patch v1
(2.77 KB, patch)
2019-09-15 22:19 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-09-15 22:14:24 PDT
<
rdar://problem/55387597
>
David Kilzer (:ddkilzer)
Comment 2
2019-09-15 22:19:06 PDT
Created
attachment 378839
[details]
Patch v1
WebKit Commit Bot
Comment 3
2019-09-16 11:29:56 PDT
Comment on
attachment 378839
[details]
Patch v1 Clearing flags on attachment: 378839 Committed
r249907
: <
https://trac.webkit.org/changeset/249907
>
WebKit Commit Bot
Comment 4
2019-09-16 11:29:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug