[WebAuthn] REGRESSION (r249059): Leak of WKMockNFTag objects and WKMockNFTag instance variables <https://webkit.org/b/201813>

Reviewed by Darin Adler.

* UIProcess/WebAuthentication/Mock/MockNfcService.mm:
(-[WKMockNFTag dealloc]): Add method and release instance
variables to fix leaks.
(WebKit::MockNfcService::detectTags const): Use adoptNS() to fix
leaks of WKMockNFTag objects.


Canonical link: https://commits.webkit.org/215461@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249907 268f45cc-cd09-0410-ab3c-d52691b4dbfc